fix poster width on Safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,7 +78,6 @@ main {
 }
 
 .Event .poster {
-  width: max-content;
   max-height: 20rem;
   border-radius: 0.5rem;
 }
